[gd_scene load_steps=15 format=2]

[ext_resource path="res://entidades/zorro/cara_zorro.tscn" type="PackedScene" id=1]
[ext_resource path="res://escenas/regiones/Tarjetas.gd" type="Script" id=2]
[ext_resource path="res://recursos/imagenes/indicadores/icon_Correcto.png" type="Texture" id=3]
[ext_resource path="res://recursos/imagenes/reg3/arrowLeft.png" type="Texture" id=4]
[ext_resource path="res://recursos/imagenes/reg3/bkd_Sostavento_Dim.png" type="Texture" id=5]
[ext_resource path="res://recursos/imagenes/reg3/tarjetas/1A1.png" type="Texture" id=6]
[ext_resource path="res://recursos/imagenes/indicadores/dialog_Planteamiento.png" type="Texture" id=8]
[ext_resource path="res://recursos/imagenes/indicadores/icon_Incorrecto.png" type="Texture" id=9]
[ext_resource path="res://recursos/imagenes/icon_Menu.png" type="Texture" id=10]

[sub_resource type="ShaderMaterial" id=7]

[sub_resource type="StyleBoxTexture" id=8]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 3896, 541 )

[sub_resource type="DynamicFontData" id=6]
hinting = 1
font_path = "res://recursos/fuentes/montserrat_Static/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=10]
size = 25
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 2
font_data = SubResource( 6 )

[node name="Control" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
material = SubResource( 7 )
margin_top = 1.0
margin_right = 1919.0
margin_bottom = 1074.0
custom_styles/panel = SubResource( 8 )

[node name="tsb_Siguiente" type="TouchScreenButton" parent="Panel"]
position = Vector2( 1400, 480 )
scale = Vector2( 0.138889, 0.132407 )
normal = ExtResource( 4 )

[node name="tsb_Atras" type="TouchScreenButton" parent="Panel"]
visible = false
position = Vector2( 486, 771 )
rotation = -3.14159
scale = Vector2( 0.138356, 0.131685 )
normal = ExtResource( 4 )

[node name="Cuadro" type="CanvasLayer" parent="Panel"]

[node name="AnimatedSprite" parent="Panel/Cuadro" instance=ExtResource( 1 )]
position = Vector2( 1787.15, 114.892 )
scale = Vector2( 0.1119, 0.103804 )

[node name="Fondo" type="Panel" parent="Panel/Cuadro"]
margin_left = 257.0
margin_top = 30.0
margin_right = 1686.0
margin_bottom = 216.0
custom_styles/panel = SubResource( 9 )

[node name="Title" type="Label" parent="Panel/Cuadro"]
margin_left = 290.0
margin_top = 50.0
margin_right = 1607.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Ejercicio 
"
autowrap = true

[node name="Texto" type="Label" parent="Panel/Cuadro"]
margin_left = 295.0
margin_top = 86.0
margin_right = 1522.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "TEXTO"
autowrap = true

[node name="tsb_Continuar" type="TouchScreenButton" parent="Panel/Cuadro"]
position = Vector2( 1503, 54 )
scale = Vector2( 0.0648148, 0.0657407 )
normal = ExtResource( 4 )

[node name="Falso" type="TouchScreenButton" parent="Panel"]
position = Vector2( 1505, 858 )
scale = Vector2( 1.3, 1 )
normal = ExtResource( 9 )

[node name="Verdadero" type="TouchScreenButton" parent="Panel"]
position = Vector2( 1703, 857 )
scale = Vector2( 1.3, 1 )
normal = ExtResource( 3 )

[node name="EjercicioT2" type="Sprite" parent="Panel"]
position = Vector2( 942, 629.25 )
scale = Vector2( 2.20588, 2.26424 )

[node name="EjercicioT1" type="Sprite" parent="Panel"]
visible = false
position = Vector2( 942, 629.25 )
scale = Vector2( 2.206, 2.264 )
texture = ExtResource( 6 )

[node name="volver" type="TouchScreenButton" parent="."]
position = Vector2( 37, 23 )
scale = Vector2( 0.0856481, 0.0921296 )
normal = ExtResource( 10 )

[connection signal="pressed" from="Panel/Cuadro/tsb_Continuar" to="." method="_on_tsb_Continuar_pressed"]
[connection signal="pressed" from="Panel/Falso" to="." method="_on_Falso_pressed"]
[connection signal="pressed" from="Panel/Verdadero" to="." method="_on_Verdadero_pressed"]
[connection signal="pressed" from="volver" to="." method="volver"]
